Add new dependencies for enhanced application functionality and integrations

--- a/package.json
+++ b/package.json
@@ -41,15 +41,22 @@
   "author": "bachir fahmi (https://github.com/bechir-fahmi)",
   "license": "MIT",
   "dependencies": {
+    "@octokit/rest": "^21.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-winston": "^4.2.0",
     "helmet": "^8.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "linkedin-api-client": "^0.3.0",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
-    "openai": "^4.85.3"
+    "openai": "^4.85.3",
+    "stripe": "^17.7.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
